--- a/sub_45.html
+++ b/sub_45.html
@@ -16,7 +16,7 @@
 	<script src="js/script2.js?ver202502"></script>
 <style>
 :root {
-	--main-color: #7593A6;
+	--main-color: #D57A3E;
 	--text-color-small: #fff;
 	--text-color-title: #fff;
 	--text-color-title2: #fff;
@@ -155,7 +155,7 @@ p.description b {
 					<div class="article-header-text">
 						<span>푸드테라피</span>
 						<h2>
-							작지만 영양은 꽉 찬, 콩
+							겨울철 비타민 덩어리 감귤
 						</h2>
 						<!-- <h4>부토 오너 셰프</h4> -->
 						<!-- <h3>땅의 여자</h3> -->
@@ -179,136 +179,111 @@ p.description b {
 			<div class="article-body-wrap">
 				<div class="article-prologue">
 					<p>
-						콩은 ‘밭에서 나는 고기’라 불릴 만큼 단백질이 풍부한 세계적인 건강 식재료다. 한국인의 밥상에 늘 함께해온 콩은 단백질뿐 아니라 지방과 탄수화물까지 균형 있게 갖추고 있다. 또한 된장, 두부, 두유 등 다양한 형태로 가공되어 우리의 식문화 속에 깊숙이 자리 잡았다. 오랜 세월 한국인의 삶과 건강을 지탱해 온 대표 농산물, 콩의 가치를 다시금 들여다본다. 
+						겨울이 깊어질수록 더욱 짙은 노란빛으로 물드는 감귤. 새콤달콤한 맛과 상큼한 향으로 추운 계절을 환하게 밝혀주는 감귤은 단순한 간식을 넘어 겨울철 건강을 지켜주는 과일이다. 껍질을 벗기는 순간 퍼지는 향긋한 향은 마음을 따뜻하게 감싸고, 한 알 한 알 터지는 과육은 입안 가득 생기를 불어넣는다. 레드향, 천혜향, 한라봉 등 다양한 만감류가 등장했지만, 감귤은 여전히 누구나 부담 없이 어디서나 즐길 수 있는 겨울의 대표 과일로 사랑받고 있다.
 					</p>
 				</div>
 				<div class="article-text">
 					<h5>
-						슈퍼푸드, 콩의 재발견
+						새콤달콤 감귤로 채우는 겨울철 에너지
 					</h5>
 					<p>
-						콩은 인류가 오래전부터 사랑해 온 대표적인 슈퍼푸드다. 단백질 35~40%, 탄수화물 30%, 지방 15~20%로 구성되어 있으며, 그중 단백질 함량이 가장 높다. 이 때문에 ‘밭에서 나는 고기’라는 별명으로 불리기도 한다. 단백질은 우리 몸의 주요 에너지원으로, 근육을 형성하고 체력을 유지하는 데 중요한 역할을 한다. <br>
-						또한 콩에 풍부한 식이섬유는 장 운동을 활발하게 해 변비를 예방하고, 이소플라본은 여성 호르몬과 유사하게 작용해 골다공증 예방과 갱년기 증상 완화에 도움을 준다. 기억력 개선에 효과적인 레시틴 성분이 풍부하며, 검정콩에 들어 있는 안토시아닌 등 항산화 물질은 피부와 눈 건강을 지키는 데에도 유익하다.
+						추운 겨울, 손으로 감귤 껍질을 벗기는 순간 퍼지는 상큼한 향과 입안 가득 터지는 달콤한 과즙은 얼어붙은 몸과 마음을 녹여준다. 감귤에는 비타민을 비롯해 무기염류, 식이섬유 등 건강 유지와 질병 예방에 도움이 되는 영양소가 풍부하다. 특히 비타민 C 함량이 100g당 약 36mg으로, 감귤 2~3개면 성인 하루 권장 섭취량을 충족할 수 있다. 비타민 C는 유해 산소로부터 세포를 보호하는 항산화 작용을 통해 피부를 매끄럽게 하고 혈색을 좋게 하며, 신진대사를 촉진해 겨울철 감기 예방에도 효과적이다. 또한 감귤에 함유된 구연산은 피로의 원인 물질인 젖산을 분해하고, 산성화된 체질을 약알칼리성으로 개선해 성인병 예방에 도움을 준다. 감귤 100g의 열량은 약 47kcal에 불과해 저칼로리 간식으로도 손색이 없다.
 					</p>
 					<h6>
-						< 콩(대두) 영양성분 >
+						< 감귤(온주밀감) 영양성분 >
 					</h6>
 					<span class="nutri-grid-text">
 						(100g 기준)
 					</span>
 					<div class="nutri-grid grid-1">
 					  <div class="cell">
-					    <div class="cell-title">니아신</div>
-					    <div class="cell-value">2.507mg</div>
+					    <div class="cell-title">열량</div>
+					    <div class="cell-value">47Kcal</div>
 					  </div>
 					  <div class="cell">
-					    <div class="cell-title">단백질</div>
-					    <div class="cell-value">38.5g</div>
+					    <div class="cell-title">수분</div>
+					    <div class="cell-value">86.5%</div>
 					  </div>
 					  <div class="cell">
-					    <div class="cell-title">당질</div>
-					    <div class="cell-value">28.40g</div>
+					    <div class="cell-title">섬유질</div>
+					    <div class="cell-value">0.3g</div>
 					  </div>
 					  <div class="cell">
-					    <div class="cell-title">비타민 E</div>
-					    <div class="cell-value">2.93mg</div>
+					    <div class="cell-title">비타민C</div>
+					    <div class="cell-value">36㎎</div>
 					  </div>
 					  <div class="cell">
-					    <div class="cell-title">식이섬유</div>
-					    <div class="cell-value">22.1g</div>
+					    <div class="cell-title">비타민A</div>
+					    <div class="cell-value">8.2IU</div>
 					  </div>
 					  <div class="cell">
-					    <div class="cell-title">아연</div>
-					    <div class="cell-value">4.69mg</div>
-					  </div>
-					  <div class="cell">
-					    <div class="cell-title">엽산</div>
-					    <div class="cell-value">392.00㎍</div>
-					  </div>
-					  <div class="cell">
-					    <div class="cell-title">인</div>
-					    <div class="cell-value">678.00mg</div>
-					  </div>
-					  <div class="cell">
-					    <div class="cell-title">지질</div>
-					    <div class="cell-value">18.60g</div>
-					  </div>
-					  <div class="cell">
-					    <div class="cell-title">철분</div>
-					    <div class="cell-value">11.38mg</div>
-					  </div>
-					  <div class="cell">
-					    <div class="cell-title">칼륨</div>
-					    <div class="cell-value">1,964mg</div>
-					  </div>
-					  <div class="cell">
-					    <div class="cell-title">칼슘</div>
-					    <div class="cell-value">3236.00mg</div>
+					    <div class="cell-title">비타민B1</div>
+					    <div class="cell-value">8.2㎎</div>
 					  </div>
 					</div>
 					<p class="description">* 출처: 국립식량과학원</p> 
+
 					<h5>
-						모양도 색깔도 다양한 콩의 세계 
+						‘국산’ 감귤의 탄생
 					</h5>
-					
+					<p>
+						농촌진흥청은 오랫동안 외국 품종에 의존하던 감귤 산업의 한계를 극복하고자, 우리 품종 개발에 힘써왔다. 그 결과 ‘윈터프린스’, ‘미니향’, ‘하례조생’ 등 국산 감귤 품종을 선보였다. 새로운 품종들은 맛과 식감은 물론, 재배 편의성까지 고려해 개발·보급되고 있으며, 앞으로도 우리 땅에서 자란 고품질 감귤의 다양성을 넓혀갈 예정이다.
+					</p>
+
 					<h6>
-						< 품종명(수확시기) >
+						< 감귤 신품종 >
 					</h6>
 					<div class="nutri-grid grid-2">
 					  <div class="cell">
-					    <div class="cell-title">다드림</div>
+					    <div class="cell-title">윈터프린스</div>
 					    <div class="cell-value">
 					    	<figure>
 					    		<img src="contents/sub_45_image_1.jpg">
 					    	</figure>
 					    	<p>
-					    		두부 수율이 높고 맛과 식감이 우수한 품종이다. 만생종으로 알 크기가 굵다.
+					    		11월 말에서 12월 초 성숙하는 품종으로, 부드러운 식감과 풍부한 과즙이 특징이다. 껍질이 잘 벗겨져 먹기 편하다.
 					    	</p>
 					    </div>
 					  </div>
 					  <div class="cell">
-					    <div class="cell-title">선풍</div>
+					    <div class="cell-title">미니향</div>
 					    <div class="cell-value">
 					    	<figure>
 					    		<img src="contents/sub_45_image_2.jpg">
 					    	</figure>
 					    	<p>
-					    		논 재배 기계수확에 유리하다. 장류, 두부용으로 이용되는 품종이다.
+					    		이름처럼 작은 크기의 감귤로, 11월 중순에서 12월 중순에 출하된다. 당도가 15브릭스에 달할 정도로 달고, 소과형이라 소포장 판매나 선물용으로 인기가 높다.
 					    	</p>
 					    </div>
 					  </div>
 					  <div class="cell">
-					    <div class="cell-title">아람</div>
+					    <div class="cell-title">하례조생</div>
 					    <div class="cell-value">
 					    	<figure>
 					    		<img src="contents/sub_45_image_3.jpg">
 					    	</figure>
 					    	<p>
-					    		콩나물 수율이 우수하고, 재배 시 적절한 양·수분 관리가 필요하다. 
+					    		11월 중순에 수확되며, 노지 재배에서 당도가 높고 신맛이 적다. 껍질이 매끄럽고 착색이 빠르다.
 					    	</p>
 					    </div>
 					  </div>
 					  <div class="cell">
-					    <div class="cell-title">청자5호</div>
+					    <div class="cell-title">노을향</div>
 					    <div class="cell-value">
 					    	<figure>
 					    		<img src="contents/sub_45_image_4.jpg">
 					    	</figure>
 					    	<p>
-					    		기능성이 우수해 비만과 대사 증후군 예방 효과가 밝혀졌으며, 불마름병과 꼬투리 터짐에 강하다.
+					    		11월 말부터 12월에 출하되는 품종으로, 과즙이 풍부하고 식감이 우수하다. 11월 성숙하는 품종 중 당도가 가장 높다.
 					    	</p>
 					    </div>
 					  </div>
 					</div>
-					<p>
-						농촌진흥청은 이전 연구를 통해 검정콩 ‘청자5호’의 비만 및 대사증후군 예방 효과를 밝혀냈다. 또한 두부 가공에 적합한 ‘선풍’과 ‘대찬’, 콩나물용으로 활용되며 이소플라본과 가바(GABA) 등 기능성 성분 함량이 높은 ‘아람’ 등 용도별 맞춤 품종을 개발·보급하고 있다.
-					</p>
 					<h5>
-						생활 속에서 즐기는 콩 
+						감귤 더 맛있게 즐기기
 					</h5>
 					<p>
-						맛있고 고소한 콩을 고르려면 알이 고르고 색이 선명하며, 껍질이 매끈한 것을 선택하는 것이 좋다. 수분이 많아 눅눅한 콩은 곰팡이가 생기기 쉬우므로 건조하고 단단한 상태로 보관해야 한다.<br>
-						조리법도 다양하다. 밥에 넣어 먹으면 담백한 풍미와 영양을 더할 수 있고, 삶아 샐러드에 곁들이면 간단하게 단백질을 보충할 수 있다. 또한 콩을 볶아 차로 즐기거나, 갈아 두유나 콩국수로 만들어 먹는 등 일상 속에서 폭넓게 활용할 수 있어 건강한 식생활을 지켜주는 든든한 식재료다. 
+						맛있는 감귤을 고르려면 꼭지가 단단하고 푸른색을 띠는 것이 수확 후 신선도가 높은 상태이다. 껍질이 얇고 매끄러우며, 손에 쥐었을 때 탄력이 느껴지는 것이 좋다. 껍질이 지나치게 말랑하거나 곰팡이가 핀 것은 빨리 골라내는 것이 좋다. 감귤은 껍질을 까서 바로 먹는 것이 가장 간편하지만, 한 박스씩 구매해 빠르게 소비해야 하므로 다양한 조리법으로 감귤을 즐길 수 있다. 청이나 잼을 만들어 저장하면 오래 두고 먹을 수 있고, 과육을 먹고 남은 껍질을 말려 차로 즐길 수 있다. 
 						<i class="icon_last"></i>
 					</p>
 				</div>
