--- a/sub_44.html
+++ b/sub_44.html
@@ -16,11 +16,11 @@
 	<script src="js/script2.js?ver202502"></script>
 <style>
 	:root {
-		--main-color: #769EB3;
+		--main-color: #7F8F59;
 		--text-color-small: #fff;
 		--text-color-title: #fff;
 		--text-color-title2: #fff;
-		--input-box-color: #769EB3;
+		--input-box-color: #7F8F59;
 	}
 
 
@@ -82,24 +82,24 @@
 	justify-content: flex-end;
 }
 .graphic-1 {
-	top: -3%;
-	left: 36%;
-	width: 10%;
+	bottom: 2%;
+	right: 2%;
+	width: 15%;
 }
 figure.graphic-2 {
-	bottom: 0%;
-	right: 5%;
-	width: 20%;
+	top: -10%;
+	right: -120%;
+	width: 10%;
 }
 figure.graphic-3 {
-	top: 0%;
-	right: 0%;
+	bottom: 0%;
+	right: -5%;
 	width: 40%;
 }
 figure.graphic-4 {
-	bottom: -3%;
-	left: -5%;
-	width: 15%;
+	top: -10%;
+	left: 0;
+	width: 85%;
 }
 @media (max-width:767px) { 
 	.article-header-text h2 {
@@ -147,24 +147,25 @@ figure.graphic-4 {
 					<div class="article-header-text">
 						<span>방구석 시골 영화관</span>
 						<h2>
-							경계 없는 자연,<br>
-							그 곁의 사람들에 관한 시
+							글자를 배우고, <br>인생을 시로 다시 쓰다
 						</h2>
 						<!-- <h4>부토 오너 셰프</h4> -->
 						<h3>
-							다큐 영화 무경계
+							칠곡 가시나들
 						</h3>
 						<p>
-							하늘에서 내려다본 섬으로 시작하는 <무경계>는 자연 다큐멘터리의 형식을 빌리면서도 그 너머를 응시하게 만드는 철학적 성찰의 영화다. 단순히 산과 바다의 풍경에 머물지 않고, 해가 떠오르는 순간과 구름 위로 번지는 빛, 비 뒤에 드러나는 맑은 하늘, 그리고 그 속에서 살아가는 사람과 곤충, 동물들의 모습까지. 경계 없는 자연의 얼굴을 스크린 위에 담아낸다.
+							여든이 넘어 글자를 배우면서 세상을 다시 읽게 된 할머니들. 그들의 글씨는 서툴지만, 그 서툼 속에 피어난 문장은 오히려 진짜 문학의 온도를 품고 있다. 장면마다 잔잔히 흘러나오는 할머니들의 시를 통해, 영화는 말한다. 세상에서 가장 따뜻한 시는, 살아 있는 삶 속에서 태어난다고.
 						</p>
 						<div class="article-meta">
+							<span class="b">보러가기 </span>
+							<span>쿠팡플레이 ・ 웨이브 ・ U+모바일tv</span><br>
 							<span class="b">글</span>
 							<span>장희주</span>
 							<span class="pipe">ㅣ</span>
 							<span class="b">사진</span>
 							<span>네이버 영화</span><br>
 							<span class="b">자료</span>
-							<span>한국관광공사 포토코리아, 전태현, 김지호, IR스튜디오, 라이브스튜디오</span><br>
+							<span>한국관광공사 포토코리아 박성근 & 김지호</span><br>
 						</div>
 					</div>
 					<div class="article-header-image">
@@ -186,13 +187,22 @@ figure.graphic-4 {
 						</div>
 					</div>
 					<h4>
-						국립공원의 시간을 담다
+						글자를 읽는다는 건, 세상을 다시 여는 일 
 					</h4>
 					<p>
-						<무경계>는 2023년 국립공원 지정 55주년을 기념해 제작됐다. 당초 TV 다큐멘터리 3부작 ‘한반도의 보석, 국립공원’으로 기획됐다가 이를 재편집해 스크린에 옮긴 것이다. 제작팀은 영화를 위해 1년 동안 전국 23개 국립공원 중 18곳을 다니며 4K 초고화질로 자연을 기록했다. 구름의 움직임을 담기 위해 설악산과 소백산을 수차례 오르고, 토왕성폭포에서는 드론을 띄워 단 한 줄기 햇살을 화면에 담았다.
+						‘1938년 조선총독부는 모든 학교에서 한글 교육을 금지, 일본어 사용을 강제했다.’
 					</p>
 					<p>
-						이 치열한 기록과 섬세한 연출은 국제적으로도 인정받았다. 독일, 홍콩, 아랍에미리트, 인도 등 여러 국제영화제에서 다큐멘터리상과 촬영상을 수상하며 작품성을 입증했다. 최근에는 2024 뉴욕 페스티벌에서 ‘다큐멘터리 자연과 야생 부문’ 은상을 수상하며 여전히 호평을 이어가고 있다. 
+						영화의 시작은 조용하지만 묵직하다. 이 자막이 뜨는 순간, 단지 ‘글을 배우지 못한 세대’의 이야기가 아니라 지워진 이름과 목소리를 되찾는 기록임을 깨닫게 된다. 
+					</p>
+					<p>
+						<칠곡가시나들은> 인생 팔십 줄에 들어서 한글과 사랑에 빠진, 칠곡군 약목면 복성2리 일곱 할머니들의 이야기를 담고 있다. 2015년부터 ‘칠곡늘배움학교’에 다니기 시작한 할머니들은 난생처음 시험도 보고, 커닝도 하고, 농땡이도 피워가며 ‘가갸거겨’를 익혀간다. 
+					</p>
+					<p>
+						그래서일까. 할머니들에게 한글을 읽는 일은 곧 세상을 다시 읽는 일이 된다. 시장에 나가 간판을 하나하나 읽어내는 장면은 그 자체로 경이롭다. ‘오골계, 생닭, 노계, 삼계’. 그리 거창한 문장도, 특별한 글자도 아니지만, 할머니들이 간판을 또박또박 읽어 내려갈 때마다 세상은 새롭게 열린다.
+					</p>
+					<p>
+						카메라는 이들의 일상을 큰 장치 없이 담아낸다. 빨래터에서 빨래를 하고 잠깐 쉬며 막걸리 한잔 기울이는 모습, 무릎과 허리 통증으로 병원에 가는 모습, 드라마를 보며 깔깔 웃는 장면들. 겉으로 보면 특별할 것 없는 하루의 반복이지만, 작은 하루하루가 모여 한 사람의 세계를 이룬다는 것 <칠곡가시나들>이 말하는 배움의 진짜 얼굴이다.
 					</p>
 					<!-- <blockquote class="quote-normal">
 						“다음에 다시 태어나도 네 친구 할 끼야.”
@@ -205,28 +215,27 @@ figure.graphic-4 {
 						</div>
 					</div>
 					<h4>
-						한편의 연시처럼, 풍경과 사람을 읊다 
+						이래도 시고, 저래도 시다 
 					</h4>
 					<p>
-						영화는 국립공원의 산과 바다를 단순한 경관으로 소비하지 않는다. 자연의 변주에 따라 시시각각 달라지는 풍경을 담아낼 뿐 아니라, 그곳을 삶터로 살아가는 인간과 동물, 곤충들의 모습까지 함께 보여준다. 그래서 제목 그대로, 자연과 인간 사이의 ‘경계 없음’을 촘촘한 이미지의 문법으로 설파한다. 
+						할머니들은 한글을 깨친 것에서 한 걸음 더 나아가, ‘시를 쓰는 사람’이 되었다. 매일 밥을 짓듯 한 글자 한 글자 눌러쓰며 마음을 담고, 그렇게 적은 시는 어느새 마을의 풍경이 되었다. 할머니들이 쓴 시는 맞춤법은 틀리고 띄어쓰기는 엉망이지만, 그 한 줄 한 줄엔 ‘배움의 진심’과 ‘사랑의 기억’이 묻어난다.
 					</p>
 					<p>
-						무엇보다 이처럼 웅대한 풍경 뒤에는 늘 자연과 더불어 살아온 사람들이 있다. 영화는 그들의 목소리를 따라가며 국립공원의 또 다른 얼굴을 보여준다. 안개 낀 경주 칠불암, 마루에 걸터앉은 스님은 자연을 바라보며 이렇게 말한다. “소리는 지나가고 바람도 지나가는데, 그 지나가는 소리와 바람에 걸리고 얽매여 집착만 하고 있구나.” 그러고는 덧붙인다. “그래서 옛사람들은 자연을 보고 법문을 들은 거야.” 
+						곽두조 할머니는 아들은 “뭐하러 공부하노”라며 말리지만, 며느리는 “시어머니 똑똑해지라고 공부하라”고 응원한다고 웃으며 말했다. 그래서 할머니의 시에는 이런 구절이 남았다. ‘우리 며느리가 공부한다고 자꾸 하라칸다. 시어마이 똑똑하라고 자꾸 하라킨다.’
 					</p>
 					<p>
-						이어지는 지리산 천왕봉 장면에서는 새소리와 풀벌레 소리가 어우러져 산 전체를 가득 채운다. 영화의 정서를 구체적으로 드러내는 인물은 바로 이곳, 지리산에서 살아가는 산악인 남난희다. “내 앞의 길은 내가 걷지 않으면 줄어들지 않는다”는 말처럼 그는 매일 지리산을 오른다. 나무를 끌어안고 “잘 계셨습니까” 인사하는 장면은 숭고하다 못해 다정하다. 그러나 80년이 지나도록 아물지 않은 송진 수탈의 상처 앞에서는 “죄송합니다” 라는 말이 먼저 튀어나온다. 자연을 경배의 ‘대상’이자 경배의 ‘무대’로 바라보는 영화의 시선은, 이렇게 겸손과 죄책의 진폭을 함께 흔든다.
+						강금연 할머니는 아들에게 편지를 쓴다. “아들노코 얼마나 조안는데 이제 그이들 하태 미아하다 내 몸따가 성하지를 모타이 아들 미느리 욕 빈다 자나깨나 걱정해주는 아들이 참 고맙다 밥 잘 무라, 어미 시다.’ 맞춤법도 띄어쓰기도 엉망이지만, 그 서툰 문장들은 오히려 문학보다 더 진한 문학이다. 편지를 다 쓴 할머니는 혹시 우표가 떨어질까 걱정돼 손가락으로 꾹꾹 눌러 붙인다. 그렇게 빨간 우체통 속으로 사라진 편지는 며칠 뒤 아들의 집에 도착한다. 그리고 다시 강금연 할머니에게로 되돌아본다. 
+					</p>
+					<p>“사랑하는 어머니, 편지 받고 깜짝 놀랐습니다. 정성스러운 어머니의 글씨에 눈물이 났습니다.” 이 순간 한글은 단순한 문자나 기술이 아니라, 사랑을 건네는 다리가 된다. 
 					</p>
 					<p>
-						영화의 호흡은 산에서 바다로 자연스레 넘어간다. 조수간만, 일출과 노을, 물결 위에 먼저 피어나는 ‘물별’까지. 바다는 두려움의 장벽이자 생명의 터전이다. 제주 해녀 김복순의 숨비소리는 이 바다의 시간을 인간의 시간으로 번역해 준다. “바당만 보며 자랐수다”라는 고백 뒤로, 절벽의 풍경과 무너짐조차 두려워하지 않는 태도가 겹친다. 
+						박금분 할머니는 말한다. ‘가마이 보니까 시가 참 만타. 여기도 시, 저기도 시, 시가 천지삐까리다.’
 					</p>
 					<p>
-						이어지는 장면들은 월악산 충주호, 지리산, 주왕산, 변산반도 등으로 촘촘히 연결된다. 여우와 곤충, 약초꾼과 스님, 섬 박사와 할머니들, 죽염을 굽는 장인까지. 영화는 ‘자연 곁에서’ 혹은 ‘자연을 빌려’ 살아온 사람들의 얼굴을 오래 바라본다. 
+						정말 그렇다. <칠곡가시나들>의 세계는 온통 시로 가득하다. 사랑을 몰라 부끄럽다고 읊는 박월선 할머니의 시, 하루하루를 살아내며 써 내려간 이름 없는 시들이, 이 영화 안에서 모두 하나의 삶으로 이어진다. 
 					</p>
 					<p>
-						〈무경계〉가 흥미로운 지점은 기존 자연 다큐의 문법을 과감히 비켜선 구성이다. 정보는 최소화하고, 내레이션은 시처럼 ‘덜어’ 말한다. 그 결과 1시간 29분이라는 러닝타임이 장면마다 하나의 연시(聯詩)처럼 이어진다. 바다의 신인 용왕에게 기원하는 용왕제, 단군을 모시는 제례 행사인 개천대제, 승려들의 바라춤, 동백꽃의 붉은 몽우리 속 노란 수술이 드러나는 순간들까지. 의식과 계절, 식물의 미세한 시간이 한 편의 시처럼 흘러간다.
-					</p>
-					<p>
-						자연을 한 편의 시처럼 연출한 <무경계>는 국립공원을 낯설고도 새로운 눈으로 바라보게 한다. 그곳은 어떤 풍경일까. 지금, 그 장면 속으로 함께 걸어가 보자. 
+						영화의 또 다른 주인공은 사계절의 칠곡 풍경이다. 봄의 쑥, 여름의 장맛비, 겨울 장독대의 눈. 할머니들의 시 한 줄처럼 소박하고 정겨운 풍경들이 스크린 위에 펼쳐진다. 과장되지 않았지만 따뜻한 이 장면들은, 결국 할머니들이 써 내려간 시의 마음과 닮아 있다. 이제 그 시 속 풍경을 따라, 칠곡의 하루로 천천히 걸어가 보자.  
 						<i class="icon_last"></i>
 					</p>
 				</div>
@@ -234,22 +243,19 @@ figure.graphic-4 {
 					<div class="town-box reverse">
 						<div class="town-left">
 							<h6>
-								남한에서 가장 높은 봉우리이자 대한민국 1호 국립공원
+								금오산 깊은 골짜기에 숨은 물의 절벽
 							</h6>
 							<h5>
-								지리산국립공원
+								구미 금오산 대혜폭포
 							</h5>
 							<p>
-								영화에서 가장 비중 있게 다뤄지는 곳은 지리산국립공원이다. 산악인 남난희가 매일같이 오르던 산 역시 지리산이다.
+								비가 부슬부슬 내리던 날, 세 할머니는 구미 금오산으로 향한다. 케이블카를 타고 올라 도착한 대혜폭포 앞, 눈앞에는 웅장한 물줄기가 쏟아지고, 그 앞에 선 할머니들은 잠시 말을 잃는다. “옛날엔 다리도 없었는데… 절만 있었지.” 세월이 흐르며 달라진 풍경을 바라보며, 할머니들은 조용히 옛 시절을 떠올린다.
 							</p>
 							<p>
-								1967년 우리나라 제1호 국립공원으로 지정된 지리산은, 남한에서 가장 높은 봉우리를 품고 있는 산이기도 하다. 전북특별자치도 남원시와 전남 구례군, 경남 하동·산청·함양군에 걸쳐 있으며, 천왕봉(1,915m)을 비롯해 제석봉, 반야봉, 노고단 등 해발 1,500m 이상의 고산 준봉들이 줄지어 서 있다.
+								대혜폭포는 경상북도 구미시 남통동 금오산 자락, 해발 약 400m 지점에 자리한 높이 28m의 폭포다. 금오산을 울릴 만큼 세차게 떨어지는 물소리 때문에 ‘명금폭포(鳴金瀑布)’라 불리기도 한다. 폭포 아래 넓은 소(沼)는 예로부터 하늘의 선녀가 내려와 목욕을 즐겼다는 전설이 전해져 ‘욕담(浴潭)’ 또는 ‘선녀탕’이라 불린다.
 							</p>
 							<p>
-								총면적 483.02㎢에 달하는 이곳은 ‘한반도 생태계의 보고’ 라 불릴 만큼 다양한 동식물이 서식한다. 그만큼 지리산의 풍광은 생태만이 아니라 지형과 문화까지 품고 있다. 뱀사골과 칠선계곡 같은 깊은 협곡, 구룡·불일·용추·등선폭포 등 이름난 폭포들이 어우러져, 발걸음을 옮길 때마다 전혀 다른 풍광이 펼쳐진다. 곳곳에는 화엄사, 쌍계사, 실상사 같은 유서 깊은 사찰과 수많은 암자가 자리해, 단순한 산행을 넘어선 사색의 여정을 선물한다.
-							</p>
-							<p>
-								대표적인 등산 코스로는 천왕봉, 반야봉, 노고단이 있다. 지리산 최고봉인 천왕봉(1,915m)은 한반도에서 세 번째로 높은 산으로, ‘지리산 3대 주봉’ 가운데 하나다. 난이도는 다소 높지만 정상에 서면 시야가 확 트이는 장관을 만끽할 수 있다. 반야봉(1,732m)은 일몰 명소로 유명해 많은 등산객이 찾는다. 노고단 코스는 접근성이 좋아 비교적 쉽게 오를 수 있으며, 완만한 경사와 아름다운 풍경 덕분에 특히 인기가 높다.
+								등산객이 많은 금오산에 자리한 대혜폭포는 사계절 내내 다른 얼굴을 보여준다. 봄이면 물안개가 피어나고, 여름에는 녹음이 폭포를 감싸며, 가을에는 단풍이 물 위에 흩어지고, 겨울이면 얼음기둥이 절벽을 수놓는다. 또한 폭포 주변에는 도선굴, 약사암, 도리사 등이 자리해 금오산 관광의 백미를 이룬다.
 							</p>
 							<ul>
 								<!-- <li>
@@ -258,7 +264,7 @@ figure.graphic-4 {
 								</li> -->
 								<li>
 									<span>주소</span>
-									경상남도 하동군 화개면 화개로 541-9
+									경상북도 구미시 남통동 산 94
 								</li>
 							</ul>
 						</div>
@@ -266,40 +272,31 @@ figure.graphic-4 {
 							<figure>
 								<img src="contents/sub_44_town_11.jpg">
 							</figure>
-							<figure>
-								<img src="contents/sub_44_town_12.jpg">
-							</figure>
 						</div>
 						<figure class="graphic-1 town-graphic">
 							<img src="contents/sub_44_town_graphic_1.png">
-						</figure>
-						<figure class="graphic-2 town-graphic">
-							<img src="contents/sub_44_town_graphic_2.png">
 						</figure>
 					</div>
 					<div class="article-image big-image bottom-image">
 						<div class="article-image-container">
 							<figure>
-								<img src="contents/sub_44_town_13.jpg">
+								<img src="contents/sub_44_town_12.jpg">
 							</figure>
 						</div>
 					</div>
 					<div class="town-box reverse">
 						<div class="town-left">
 							<h6>
-								섬의 보고(寶庫)이자 열 네번째로 지정된 국립공원
+								기억의 통로이자 역사의 풍경
 							</h6>
 							<h5>
-								다도해해상국립공원
+								왜관철교 & 관호산성 둘레길
 							</h5>
 							<p>
-								1981년, 우리나라 14번째 국립공원으로 지정된 다도해해상국립공원은 이름 그대로 수많은 섬과 바다가 어우러진 공간이다. 전남 홍도에서 신안·진도·완도·고흥을 거쳐 여수 돌산에 이르기까지. 크고 작은 섬들이 바다 위에 흩뿌려져 있다. 여수의 백도, 신안의 칠발도, 흑산도와 거문도는 그중에서도 손꼽히는 명소다.
+								병원 진료를 마치고 돌아오는 길, 두 할머니는 나란히 다리를 걸으며 대화를 한다. “아따, 물 많다. 참 낙동강이 유명해 그제?” “여기 물을 보니께 어지러운 기분이라” “보지 마라, 물 쳐다보지 마라.” 그 짧은 대화 속에 흘러간 세월과 삶의 무게가 스민다. 다리 너머로 노을이 붉게 번지고, 그 위로 천천히 걸음을 옮기는 두 사람의 모습이 오래 남는다.
 							</p>
 							<p>
-								바다가 숨을 고르듯 밀려났다 밀려들면, 갯벌은 광활하게 드러나고 다시 잠긴다. 해식애와 절벽은 오랜 세월 바람과 파도가 빚어낸 작품처럼 서 있고, 다양한 암석층은 지질의 교과서처럼 펼쳐진다. 그래서 다도해해상국립공원은 흔히 ‘섬의 보고(寶庫)’라 불린다.
-							</p>
-							<p>
-								섬마다 다른 표정을 지닌 풍경은, 바다가 품고 있는 시간의 깊이를 새삼 느끼게 한다. 
+								이 장면의 배경이 된 곳이 바로 왜관철교다. 경부선의 약목역과 왜관역 사이, 낙동강을 가로지르는 이 철교는 1908년 일본이 대륙 침략을 위해 부설한 군용 철도의 교량이었다. 한때는 수많은 열차가 이곳을 오갔지만, 1941년 새 철교가 놓이면서 인도교로만 사용됐다. 6·25전쟁 당시에는 남하하던 북한군을 저지하기 위해 폭파되며 ‘호국의 다리’라는 이름을 얻었다. 오랜 세월 풍상을 겪은 왜관철교는 안전 문제로 철거 위기에 놓이기도 했지만, 역사적 상징성과 지역민의 염원으로 복원이 결정되어 오늘까지 남아 있다. 지금은 낙동강을 따라 노을을 감상하며 걷기 좋은 산책로로 재탄생해, 칠곡 사람들에게는 기억과 평화의 다리로 자리 잡았다.
 								<i class="icon_last"></i>
 							</p>
 							<ul>
@@ -309,7 +306,8 @@ figure.graphic-4 {
 								</li> -->
 								<li>
 									<span>주소</span>
-									전라남도 완도군 완도읍 구계등길 48
+									경상북도 칠곡군 왜관읍 석전리<br>
+									칠곡군 약목면 관호2리 산17번지 일원
 								</li>
 							</ul>
 						</div>
@@ -317,11 +315,14 @@ figure.graphic-4 {
 							<figure>
 								<img src="contents/sub_44_town_21.jpg">
 							</figure>
-							<figure class="graphic-4 town-graphic">
-								<img src="contents/sub_44_town_graphic_4.png">
+							<figure class="graphic-2 town-graphic">
+								<img src="contents/sub_44_town_graphic_2.png">
 							</figure>
 							<figure class="graphic-3 town-graphic">
 								<img src="contents/sub_44_town_graphic_3.png">
+							</figure>
+							<figure class="graphic-4 town-graphic">
+								<img src="contents/sub_44_town_graphic_4.png">
 							</figure>
 						</div>
 					</div>
@@ -329,9 +330,6 @@ figure.graphic-4 {
 						<div class="article-image-container">
 							<figure>
 								<img src="contents/sub_44_town_22.jpg">
-							</figure>
-							<figure>
-								<img src="contents/sub_44_town_23.jpg">
 							</figure>
 						</div>
 					</div>
