--- a/sub_46.html
+++ b/sub_46.html
@@ -16,10 +16,10 @@
 	<script src="js/script2.js?ver202502"></script>
 <style>
 	:root {
-		--main-color: #E4EDE9;
+		--main-color: #f9e6da;
 		--text-color-small: #000;
-		--text-color-title: #008B72;
-		--text-color-title2: #008B72;
+		--text-color-title: #ce5822;
+		--text-color-title2: #ce5822;
 	}
 body {
 	background-color: var(--main-color);
@@ -45,13 +45,14 @@ body {
 .quote-normal {
 	margin-top: 3rem;
 	margin-bottom: 10rem;
-	text-align: center;
+	text-align: left;
+	width: 70%;
 }
-.quote-normal::before,
+/*.quote-normal::before,
 .quote-normal::after {
 	left: 50%;
 	transform: translateX(-50%);
-}
+}*/
 .article-text h4 {
 	color: var(--text-color-title);
 }
@@ -162,14 +163,13 @@ body {
 					<div class="article-header-text">
 						<span>힙한 맛남</span>
 						<h2>
-							오늘도 든든하게,<br>
-							고소한 한 알에 담긴 맛
+							겨울의 상큼함,<br>비타민 가득한 한 알의 행복
 							<b>
-								Feat. 콩
+								Feat. 감귤
 							</b>
 						</h2>
 						<p>
-							콩자반, 두부, 된장 등 건강식의 대명사였던 콩이 이제는 MZ 세대가 즐겨 찾는 단백질 식재료로 자리 잡았다. 카페 메뉴와 간식, 심지어 비건 음식까지 폭넓게 확장된 콩 레시피의 새로운 변화를 살펴본다.
+							제주의 따뜻한 햇살을 듬뿍 머금고 자란 감귤. 껍질을 벗겨 바로 먹어도 충분히 맛있지만, 이제는 그 상큼한 색과 향을 살려 다양한 방식으로 즐길 수 있는 식재료로 주목받고 있다. 음료와 디저트는 물론, 색다른 요리로까지 확장된 감귤 레시피의 새로운 변화를 만나본다.
 						</p>
 						<div class="article-meta">
 							<span class="b">글</span>
@@ -191,13 +191,19 @@ body {
 			<div class="article-body-wrap">
 				<div class="article-text">
 					<p>
-						우리나라의 콩 재배 역사는 삼국시대까지 거슬러 올라간다. 『삼국사기』와 『향약집성방』에도 콩의 재배와 효능이 기록되어 있으며, 조선시대에는 된장·간장·청국장 등 발효식품의 주원료로 사용되었다. 콩은 오랜 세월 한국인의 식생활과 건강을 지탱해 온 핵심 작물로, 지역마다 토종 품종이 이어져 내려오며 각기 다른 맛과 특색을 자랑해 왔다. 비옥한 토양과 뚜렷한 사계절은 콩이 잘 자라기 좋은 환경을 제공해, 지금도 다양한 품종의 국산 콩이 꾸준히 재배되고 있다.
+						제주 감귤의 역사는 삼국시대까지 거슬러 올라간다. 《고려사》에는 백제 문무왕 2년(476년) 탐라국에서 감귤을 진상했다는 기록이 있으며, 조선시대에는 임금에게 바치는 귀한 과일로 여겨졌다. 《조선왕조실록》에도 감자, 유자, 동정귤 등 다양한 감귤 품종이 등장한다.
 					</p>
 					<p>
-						콩은 단백질, 이소플라본, 레시틴, 항산화 물질이 풍부해 근육과 뼈, 혈관, 뇌 건강을 지키는 슈퍼푸드로 알려져 있다. 또한 식이섬유와 미네랄이 가득해 장 건강 개선과 빈혈 예방에도 도움이 된다. 전통적으로는 두부, 된장, 콩나물로 즐겨왔지만, 최근에는 디저트·드레싱·콩고기·두부면 등 트렌디한 식재료로 활용 범위가 넓어지고 있다. 고소한 맛과 든든한 영양을 모두 담은 콩 레시피를 소개한다.
+						1960년대 들어 본격적인 재배가 시작되면서 감귤은 제주를 대표하는 농산물로 자리 잡았다. 이후 품종 개량과 재배 기술의 발전으로 한라봉, 천혜향, 레드향, 황금향 등 다양한 만감류가 개발되며, 제주 감귤은 계절과 취향에 따라 선택할 수 있는 풍성한 과일로 거듭났다.
+					</p>
+					<p>
+						감귤에는 비타민 C가 풍부해 면역력 강화, 피로 해소, 피부 미용에 탁월한 효능이 있으며, 노빌레틴과 헤스페리딘 같은 플라보노이드 성분은 감귤류에만 함유된 특별한 물질로 항염·항암· 항비만 효과를 지닌다. 한방에서는 감귤 껍질을 말린 진피(陳皮)를 소화 촉진과 가래 억제에 사용하는 귀한 약재로 여긴다.
+					</p>
+					<p>
+						전통적으로는 생과나 귤 주스로 즐겨왔지만, 최근에는 감귤 에이드, 감귤 탕후루, 귤 샌드위치, 귤 칩, 귤 타르트 등 트렌디한 레시피로 활용 범위가 더욱 넓어지고 있다. 제주의 겨울 햇살을 머금은 감귤, 그 달콤하고 상큼한 변신을 지금 만나보자.
 					</p>
 					<blockquote class="quote-normal">
-						콩은 단백질과 이소플라본, 레시틴, 항산화 물질이 풍부해 근육과 뼈, 혈관과 뇌 건강을 지키는 슈퍼푸드로 알려져 있다.
+						감귤에는 비타민 C가 풍부해 면역력 강화, 피로 해소, 피부 미용에 탁월한 효능이 있다. 
 					</blockquote>
 					<article>
 						<div class="hip-recipe-image">
@@ -207,32 +213,28 @@ body {
 						</div>
 						<div class="hip-recipe">
 							<h6>
-								탄수화물을 적게! 단백질 디저트<br>
+								말랑 쫀득 귤말랭이와 따듯한 물에 띄워 귤차까지!<br>
 								<b>
-									콩 쿠키
+									감귤 칩
 								</b>
 								<span>RECIPE</span>
 							</h6>
 							<p>
 								<span>재료</span>
-								삶은 콩 1컵, 달걀 1개, 꿀 2큰술, 아몬드 가루 2큰술,  소금 약간, 견과류 약간, 초코칩 약간
+								감귤 3개, 베이킹소다 1큰술, 식초 2큰술
 							</p>
 							<ul>
 								<li>
 									<span>1</span>
-									삶은 콩을 곱게 으깬 뒤 달걀, 꿀, 아몬드 가루를 섞는다.
+									감귤 껍질은 베이킹소다와 식초로 깨끗이 세척한다. 
 								</li>
 								<li>
 									<span>2</span>
-									기호에 따라 견과류와 초코칩을 넣는다.
+									물기를 닦아내고 양 끝부분은 잘라내 5mm~1cm 간격으로 자른다.
 								</li>
 								<li>
 									<span>3</span>
-									반죽을 숟가락으로 떠서 팬 위에 동그랗게 올린다.
-								</li>
-								<li>
-									<span>4</span>
-									170℃ 오븐에서 12~15분간 구워 완성한다.
+									에어프라이어나 식품 건조기에 70~100℃로 2~4시간 구워 완성한다.
 								</li>
 							</ul>
 						</div>
@@ -243,32 +245,32 @@ body {
 						</div>
 						<div class="hip-recipe">
 							<h6>
-								채소와 빵에 곁들여 즐기는 건강한 소스<br>
+								감귤의 상큼함이 일품!<br>
 								<b>
-									콩 후무스
+									감귤 파스타
 								</b>
 								<span>RECIPE</span>
 							</h6>
 							<p>
 								<span>재료</span>
-								콩 1컵, 콩 삶은 물 2큰술, 참깨 1큰술, 올리브유 3큰술,  마늘 1쪽, 레몬즙 2큰술, 소금 약간
+								파스타 120g, 미니 파프리카 4개, 마늘 2쪽, 새우 5마리,  감귤 1개, 소금 1작은술, 후춧가루 조금, 올리브유 적당량
 							</p>
 							<ul>
 								<li>
 									<span>1</span>
-									콩은 부드럽게 삶아 준비한다.
+									파스타는 끓는 물에 소금을 적당량 넣어 삶아 준비한다.
 								</li>
 								<li>
 									<span>2</span>
-									믹서기에 콩, 올리브오일, 레몬즙, 마늘, 참깨, 소금을 넣고 곱게 갈아준다.
+									감귤은 겉껍질을 얇게 채를 썰어 1큰술 준비하고, 즙을 내 준비한다.
 								</li>
 								<li>
 									<span>3</span>
-									콩 삶은 물을 조금씩 넣어 원하는 농도로 맞춘다.
+									팬에 올리브유를 두르고 다진 마늘과 채를 썬 파프리카, 새우를 넣어 볶은 다음 파스타 면을 넣어 볶는다. 
 								</li>
 								<li>
 									<span>4</span>
-									빵, 크래커, 신선한 채소와 함께 곁들인다.
+									소금과 후춧가루로 간을 하고 감귤즙을 적당량 뿌리고, 채를 썬 껍질로 장식한다.
 								</li>
 							</ul>
 						</div>
@@ -280,28 +282,36 @@ body {
 						</div>
 						<div class="hip-recipe">
 							<h6>
-								담백한 두부면과 신선한 채소가 어우러진<br>
+								생크림과 귤, 기분 좋은 한 입<br>
 								<b>
-									두부면 샐러드 파스타
+									귤 샌드위치
 								</b>
 								<span>RECIPE</span>
 							</h6>
 							<p>
 								<span>재료</span>
-								두부면 200g, 샐러드 채소 한 줌, 오이 1/4개, 방울토마토 3알, 소금·후추 약간, 오리엔탈드레싱 적당량
+								귤 3개, 식빵 2쪽, 생크림 200ml, 설탕 20g
 							</p>
 							<ul>
 								<li>
 									<span>1</span>
-									두부면을 흐르는 물에 충분히 헹구고, 끓는 물에 1~2분 데친 뒤 찬물에 헹궈 물기를 빼준다.
+									생크림은 냉장고에서 차갑게 보관 후 설탕과 함께 단단하게 휘핑한다.
 								</li>
 								<li>
 									<span>2</span>
-									샐러드 채소, 오이, 방울토마토를 깨끗이 씻어 물기를 제거한 뒤, 먹기 좋은 크기로 자른다.
+									귤은 껍질을 까고, 식빵은 가장자리를 자른다. 
 								</li>
 								<li>
 									<span>3</span>
-									물기를 뺀 두부면과 손질한 채소를 그릇에 넣고 준비된 드레싱을 뿌려준다.
+									식빵에 생크림을 골고루 바르고, 귤을 올린다. 
+								</li>
+								<li>
+									<span>4</span>
+									귤 사이에 생크림으로 꼼꼼하게 채우고 식빵으로 덮는다. 
+								</li>
+								<li>
+									<span>5</span>
+									랩으로 싸서 냉장고에서 30분 숙성하고, 귤 단면이 강조되도록 절반을 자른다.
 									<i class="icon_last"></i>
 								</li>
 							</ul>
