--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ document.addEventListener("DOMContentLoaded", function () {
 	</script>
 <style>
 :root {
-	--main-color: #BC9D63;
+	--main-color: #396237;
 }
 .dream-right-bottom figure img {
 	max-height: 30rem;
@@ -128,31 +128,28 @@ br.mobile {
 				<div class="story-flex">
 					<div class="story-image">
 						<div class="photo-slider">
-						    <div><img src="contents/main_slide_image_1.jpg"></div>
 						    <div><img src="contents/main_slide_image_2.jpg"></div>
+						    <div><img src="contents/main_slide_image_1.jpg"></div>
 						</div>
 					</div>
 					<div class="story-text">
 						<h2>
 							<span>
-								건강한 축산의 미래,<br>농가와 국민을 위한 약속
+								우리 농산물로 여는<br>기능성 식의약 소재의 미래
 							</span>
 						</h2>
 						<div class="story-desc">
 							<p>
-국민의 식탁에는 건강한 축산물을,<br>
-구슬땀을 흘리는 농가에는 내일을 이어갈 길을 열어주기 위해<br>
-농촌진흥청은 오늘도 쉼 없이 노력하고 있습니다.<br>
-추위에도 거뜬한 국산 신품종 풀사료, 발효 안정성을 높인 알팔파,<br>
-여름철에도 안정적으로 키울 수 있는 사료피 ‘조온’, ‘다온’은<br>
-기후에 흔들림 없이 사료를 확보할 수 있도록 농가에 든든한 선택지를 더해 줍니다. <br>
-또한 농가 스스로 사료를 제조할 수 있는 섬유질배합사료(TMR) 기술은<br>
-사료 구입 비용을 줄이고 자급의 힘을 키워 줍니다.<br>
-스마트 축산의 길도 열리고 있습니다.<br>
-국산 로봇착유기는 낙농가의 노동 부담을 덜어주고,<br>
-데이터 기반의 관리는 젖소의 건강과 생산성을 지켜냅니다.<br>
-이렇듯 농촌진흥청은 오늘도 국민에게는 안심 먹거리를, <br>
-농가에는 지속 가능한 내일을 함께 준비하고 있습니다.
+기능성 식의약 소재의 시작은 <br>
+우리 땅에서 자란 한 알의 씨앗입니다.<br>
+농촌진흥청은 우리 농산물에 담긴 성분을 과학으로 풀어내,<br>
+건강을 지키는 원료로, <br>
+미래 산업을 키우는 토대로 길러내고 있습니다. <br>
+참당귀와 팥순 그리고 흑삼이 약이 되고, <br>
+감초와 황기가 산업이 됩니다.<br>
+연구실에서 밭으로, 밭에서 다시 식탁으로.<br>
+농업과학의 연구가 모여 국민의 건강과 산업의 자립을 이끄는 길,<br>
+그 길의 이름은 ‘기능성 식의약 소재 국산화’입니다.
 							</p>
 						</div>
 					</div>
@@ -170,7 +167,7 @@ br.mobile {
 							<div class="theme-text">
 								<span style="background-color: #000; color: #fff">테마 인사이트</span>
 								<h4>
-									국민에게는 건강한 축산을,<br>농가에는 지속 가능한 해법을!
+									국산 농산물로 여는<br>기능성 식의약 소재의 미래
 								</h4>
 								<!-- <h5>
 									밥상 위의 작은 혁명
@@ -186,11 +183,10 @@ br.mobile {
 							<div class="theme-text">
 								<span>테마 인터뷰</span>
 								<h4>
-									지속 가능한 축산을 향해,<br>
-									열풍건초 생산 시스템으로 <br>새 길을 열다
+									우리 땅의 약초로 여는<br>K-허브의 시대!
 								</h4>
 								<h5>
-									신용안영농조합법인 김원태 대표
+									㈜서흥헬스케어 박금덕 대표
 								</h5>
 							</div>
 						</div>
@@ -203,10 +199,10 @@ br.mobile {
 							<div class="theme-text">
 								<span style="background-color: #000; color: #fff">트렌드 탐구</span>
 								<h5>
-									발효의 재발견!
+									혈당 관리!
 								</h5>
 								<h4>
-									힙해진 한 모금과 <br class="mobile">한 스푼
+									건강을 넘어<br>몸의 리듬을 세우는 문화로
 								</h4>
 							</div>
 						</div>
@@ -228,10 +224,10 @@ br.mobile {
 							</div>
 							<div class="life-text">
 								<h4>
-									조리와 음식을 열쇠말로 기록한 유산
+									조선의 조리서
 								</h4>
 								<span>
-									수운잡방
+									음식디미방
 								</span>								
 							</div>
 						</div>
@@ -246,10 +242,10 @@ br.mobile {
 							</div>
 							<div class="life-text">
 								<h4>
-									햇살과 바람을 닮은 집에서
+									자연의 숨결을 품은
 								</h4>
 								<span>
-									한솔이 가꾸는 소소한 낭만
+									연화의 리틀포레스트
 								</span>
 							</div>
 						</div>
@@ -264,10 +260,10 @@ br.mobile {
 							</div>
 							<div class="life-text">
 								<h4>
-									바쁜 현대인을 위한 담백한 한입의 보고서
+									상상과 현실 사이의 요리를 빚는 셰프
 								</h4>
 								<span>
-									64만 유튜버 맛상무
+									조광효 셰프
 								</span>
 							</div>
 						</div>
@@ -289,7 +285,7 @@ br.mobile {
 									<div class="dream-text black">
 										<span>알쓸농잡(JOB)</span>
 										<h4>
-											지속 가능한 미래를<br>디자인하는 사람들
+											인류의 건강한 미래를 <br>설계하는 숨은 주역들
 										</h4>
 									</div>
 								</div>
@@ -304,13 +300,13 @@ br.mobile {
 									<div class="dream-text">
 										<span>책 읽는 농업과학자</span>
 										<h4>
-											농가와 소비자,<br>모두를 위한 지속 가능한 축산의 길
+											얼어붙은 땅 위에서,<br>꽃의 가능성을 피워내는 연구자
 										</h4>
 										<h6>
-											국립축산과학원 가축개량평가과
+											국립원예특작과학원 북부원예시험장
 										</h6>
 										<h5>
-											박원철 농업연구사
+											권오현 농업연구사
 										</h5>
 									</div>
 								</div>
@@ -327,13 +323,13 @@ br.mobile {
 									<div class="dream-text">
 										<span>이로운 맛, 농업이 미래다</span>
 										<h4>
-											땅이 알려준 진짜 답,<br>건강한 땅이 맛있는 쌀을 만든다
+											해발 600m에서 익어가는 것들
 										</h4>
 										<h6>
-											또바기농원
+											지리산피아골식품
 										</h6>
 										<h5>
-											권오빈 대표
+											김미선 대표
 										</h5>
 									</div>
 								</div>
@@ -341,20 +337,20 @@ br.mobile {
 						</div>
 						<div class="dream-box dream-right-bottom">
 							<a href="sub_31.html">
-								<div class="dream-box-container" style="background-color: #a8ae69;">
+								<div class="dream-box-container" style="background-color: #97835e;">
 									<figure>
 										<img src="contents/main_dream_4.png">
 									</figure>
 									<div class="dream-text">
 										<span>청년농UP 청년꿈UP</span>
 										<h4>
-											꿈을 지키는<br>초보 농부의 여정
+											첼리스트에서 농부로,<br>인생의 선율을 바꾸다
 										</h4>
 										<h6>
-											구름하늘 딸기 농장
+											농부와 첼리스트
 										</h6>
 										<h5>
-											강우범 대표
+											임보람 대표
 										</h5>
 									</div>
 								</div>
@@ -378,7 +374,7 @@ br.mobile {
 								<div class="healing-text">
 									<span>워케이션 & 런케이션 핫플</span>
 									<h4>
-										인천광역시
+										부산・울산・대구・경북
 									</h4>
 								</div>
 							</div>
@@ -391,8 +387,8 @@ br.mobile {
 								<div class="healing-text">
 									<span>치유농장</span>
 									<h4>
-										행복 농장 & 케어팜<br>
-										우리 가족 치유농업 서비스
+										제주특별자치도 치유농업센터<br>
+										강원특별자치도 농업기술원
 									</h4>
 								</div>
 							</div>
@@ -405,10 +401,10 @@ br.mobile {
 								<div class="healing-text">
 									<span>방구석 시골 영화관</span>
 									<h5>
-										경계 없는 자연,<br>그 곁의 사람들에 관한 시
+										글자를 배우고,<br>인생을 시로 다시 쓰다
 									</h5>
 									<h4>
-										다큐 영화 무경계
+										칠곡 가시나들
 									</h4>
 								</div>
 							</div>
@@ -423,7 +419,7 @@ br.mobile {
 								<div class="healing-text">
 									<span>푸드테라피</span>
 									<h4>
-										작지만 영양은 꽉 찬, 콩
+										겨울철 비타민 덩어리 감귤
 									</h4>
 								</div>
 							</div>
@@ -436,10 +432,10 @@ br.mobile {
 								<div class="healing-text">
 									<span>힙한 맛남</span>
 									<h4>
-										오늘도 든든하게,<br>고소한 한 알에 담긴 맛
+										겨울의 상큼함,<br>비타민 가득한 한 알의 행복
 									</h4>
 									<h5>
-										Feat. 콩
+										Feat. 감귤
 									</h5>
 								</div>
 							</div>
