--- a/sub_31.html
+++ b/sub_31.html
@@ -19,7 +19,7 @@
 		--main-color: #96825D;
 		--text-color-small: #fff;
 		--text-color-title: #E0CEAB;
-		--text-color-title2: #978257;
+		--text-color-title2: #fff;
 		--box-bg-color: #FAF3F5;
 		--box-text-color: #DD6286;
 	}
