--- a/sub_13.html
+++ b/sub_13.html
@@ -94,7 +94,10 @@ body {
 	bottom: 1rem;
 	color: #fff;
 }
-
+.article-image-text .article-image-text-text {
+    justify-content: flex-end;
+    padding-bottom: 0.2rem;
+}
 .article-image.qr-image .article-image-container {
 	display: grid;
 	grid-template-columns: 1.5fr 10fr;
