--- a/sub_22.html
+++ b/sub_22.html
@@ -206,6 +206,16 @@
 					<p>
 						1년이 넘는 공사 기간 동안 계획대로 되지 않은 일은 셀 수 없었다. 처음에는 예기치 못한 변수 하나하나에 흔들리고, 모든 걸 통제하려 애쓰며 스스로를 몰아붙이기도 했다. 하지만 시간이 흐르면서 연화는 서서히 깨달았다. ‘모든 걸 완벽히 조종할 수는 없어도, 그저 흘러가는 대로 두면 괜찮다’는 것을. 오는 건 오는 대로, 가는 건 가는 대로 받아들이는 법. 흐르는 물을 손으로 막을 수 없듯, 삶도 그렇게 흘러야 비로소 제 빛을 낸다는 사실을. 이제 그녀에게 그 흐름은 두렵지 않다. 오히려 그 속에서 새로운 길이 열리고, 그 길 위에서 삶의 진짜 재미를 다시 발견하고 있다.
 					</p>
+
+					<h4 style="margin-top:5rem">
+						대나무 숲이 품은 집
+					</h4>
+					<p>
+						집주인 할머니가 세상을 떠난 뒤, 수년간 비어 있던 이 집은 오랜 세월의 흔적을 고스란히 간직하고 있었다. 처음에는 단단해 보이는 기둥과 지붕이 마음에 들었다. 무엇보다 집 뒤편에 펼쳐진 대나무 숲이 연화를 사로잡았다. 바람이 불면 대나무 잎이 서로 스치며 내는 ‘사각사각’ 소리, 그 고요하고 평화로운 리듬이 도시의 소음을 대신했다.
+					</p>
+					<p>
+						리모델링은 골조만 남기고 전면 철거하는 방식으로 진행됐다. 천장을 뜯자 드러난 서까래는 마치 시간의 뼈대 같았다. 바닥을 깨자 구들장이 나왔고, 그 모든 잔해를 직접 들어냈다. 흙먼지와 돌가루 속에서 조금씩 집의 본모습이 드러났다. 현관문은 나무로 제작해 청록색으로 칠하고, 민트빛 지붕과 어우러지게 했다. 마당에는 배롱나무를 심고 반려가족인 포비가 마음껏 뛰어놀 수 있도록 잔디를 깔았다. 여름마다 활짝 피어날 배롱꽃을 기다리는 마음으로, 연화는 이 작은 집의 사계절을 설계했다.
+					</p>
 					<div class="article-image">
 						<div class="article-image-container">
 							<figure>
@@ -228,8 +238,9 @@
 							</figure>
 						</div>
 					</div>
+
 					<h4>
-						햇살이 가장 큰 장식이 된 주방 
+						자연을 바라보는 주방   
 					</h4>
 					<p>
 						주방은 가장 많은 시간과 정성을 들인 공간이다. 옛날 주방에는 기둥과 기둥 사이에 커다란 그릇장이 자리하고 있었지만, 공간 활용을 위해 과감히 철거했다. 대신 대나무 숲을 마주보는 방향으로 싱크대를 배치했다. 무엇보다 요리하면서도 답답하지 않게, 자연을 바라보며 숨 쉴 수 있는 주방을 만들고 싶었다.
@@ -318,6 +329,6 @@
 		</section>
 
 	</main>
-	<footer class="footer" id="footer"></footer>
+	<footer class="footer" id="footer" class="black"></footer>
 </body>
 </html>
