--- a/sub_44.html
+++ b/sub_44.html
@@ -87,9 +87,9 @@
 	width: 15%;
 }
 figure.graphic-2 {
-	top: -10%;
+	top: -5%;
 	right: -120%;
-	width: 10%;
+	width: 8%;
 }
 figure.graphic-3 {
 	bottom: 0%;
@@ -97,7 +97,7 @@ figure.graphic-3 {
 	width: 40%;
 }
 figure.graphic-4 {
-	top: -10%;
+	top: 0;
 	left: 0;
 	width: 85%;
 }
@@ -297,6 +297,9 @@ figure.graphic-4 {
 							</p>
 							<p>
 								이 장면의 배경이 된 곳이 바로 왜관철교다. 경부선의 약목역과 왜관역 사이, 낙동강을 가로지르는 이 철교는 1908년 일본이 대륙 침략을 위해 부설한 군용 철도의 교량이었다. 한때는 수많은 열차가 이곳을 오갔지만, 1941년 새 철교가 놓이면서 인도교로만 사용됐다. 6·25전쟁 당시에는 남하하던 북한군을 저지하기 위해 폭파되며 ‘호국의 다리’라는 이름을 얻었다. 오랜 세월 풍상을 겪은 왜관철교는 안전 문제로 철거 위기에 놓이기도 했지만, 역사적 상징성과 지역민의 염원으로 복원이 결정되어 오늘까지 남아 있다. 지금은 낙동강을 따라 노을을 감상하며 걷기 좋은 산책로로 재탄생해, 칠곡 사람들에게는 기억과 평화의 다리로 자리 잡았다.
+							</p>
+							<p>
+								철교에서 이어지는 길 끝에는 관호산성이 있다. 삼국시대 신라가 처음 쌓은 토성으로, 동서 약 180m, 폭 50m에 이르는 내성과 북쪽 외성의 흔적이 남아 있다. 낙동강 절벽 위 자연 지형을 그대로 활용해 축조된 이 산성은, 예로부터 전략적 요충지이자 천혜의 방어선이었다. 현재 이곳에는 관호산성 둘레길이 잘 조성되어 있어, 남녀노소 누구나 걸으며 강과 산, 마을의 풍경을 함께 즐길 수 있다. 자연과 역사가 어우러진 대표 탐방 코스다. 
 								<i class="icon_last"></i>
 							</p>
 							<ul>
