--- a/sub_22.html
+++ b/sub_22.html
@@ -329,6 +329,6 @@
 		</section>
 
 	</main>
-	<footer class="footer" id="footer" class="black"></footer>
+	<footer class="footer black" id="footer"></footer>
 </body>
 </html>
