--- a/sub_20.html
+++ b/sub_20.html
@@ -237,6 +237,27 @@ br.mobile {
 	br.mobile {
 		display: block;
 	}
+	.article-header-image {
+		margin-top: 0;
+		margin-bottom: 1rem;
+	}
+	.article-header-image figure {
+        width: 100%;
+    }
+    .trand-box-title h3 {
+    	width: 80%;
+    	line-height: 1.2;
+    }
+    .article-header-text {
+    	padding-left: 10%;
+    }
+    .article-header-text h2 {
+	    font-size: 3rem;
+	    margin-top: 2rem;
+	}
+	.article-header-text::before {
+		top: 55%;
+	}
 }
 	
 </style>
