--- a/sub_44.html
+++ b/sub_44.html
@@ -115,24 +115,24 @@ figure.graphic-4 {
 	figure.graphic-1 {
 		width: 30%;
 		right: 0;
-		top: 0;
+		top: auto;
 		left: auto;
-		bottom: auto;
-		transform: translateY(-100%);
+		bottom: 0;
+		transform: translateY(-10%);
 	}
 	figure.graphic-2 {
-	    top: 50%;
-	    bottom: auto;
-	    right: 0;
+	    top: auto;
+	    bottom: 0;
+	    right: 20%;
 	    left: auto;
-	    width: 40%;
+	    width: 10%;
 	}
 	figure.graphic-3 {
 	    top: -20%;
 	}
 	figure.graphic-4 {
 	    bottom: 0;
-	    width: 20%;
+	    width: 60%;
 	}
 }
 
