--- a/sub_13.html
+++ b/sub_13.html
@@ -195,6 +195,9 @@ body {
 	.article-image.qr-image .article-image-container {
 		grid-template-columns: 1fr 3.5fr;
 	}
+	.footer-bottom-text span, .copyright {
+        color: #fff;
+    }
 }
 
 </style>
