--- a/sub_20.html
+++ b/sub_20.html
@@ -252,11 +252,12 @@ br.mobile {
     	padding-left: 10%;
     }
     .article-header-text h2 {
-	    font-size: 3rem;
-	    margin-top: 2rem;
+	    font-size: 2.8rem;
+	    margin-top: 2.5rem;
 	}
 	.article-header-text::before {
-		top: 55%;
+		top: auto;
+		bottom: 9rem;
 	}
 }
 	
