--- a/sub_31.html
+++ b/sub_31.html
@@ -94,6 +94,9 @@
     .normal-box {
     	padding: 2rem;
     }
+    .article-header-image figure {
+	    transform: rotate(0deg) translateY(-1.5rem);
+	}
 }
 
 </style>
