--- a/sub_46.html
+++ b/sub_46.html
@@ -311,8 +311,8 @@ body {
 								</li>
 								<li>
 									<span>5</span>
-									랩으로 싸서 냉장고에서 30분 숙성하고, 귤 단면이 강조되도록 절반을 자른다.
-									<i class="icon_last"></i>
+									<div>랩으로 싸서 냉장고에서 30분 숙성하고, 귤 단면이 강조되도록 절반을 자른다.
+									<i class="icon_last"></i></div>
 								</li>
 							</ul>
 						</div>
