--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ document.addEventListener("DOMContentLoaded", function () {
 .checkbox-container {
     display: flex;
     align-items: center;
-    gap: 0.9rem
+    gap: 0.9rem;
     cursor: pointer;
 }
 .popup-footer span {
