--- a/sub_11.html
+++ b/sub_11.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="ko">
+
 <head>
 	<title>그린매거진</title>
-	<meta charset="utf-8"/>
+	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta property="og:title" content="그린매거진">
 	<meta property="og:description" content="그린매거진 웹진을 만나보세요.">
@@ -16,78 +17,89 @@
 	<script src="js/script2.js?ver202502"></script>
 
 	<style>
-:root {
-	--main-color: #BA4900;
-	--text-color-small: #fff;
-	--text-color-title: #F1DCC8;
-	--text-color-title2: #fff;
-}
+		:root {
+			--main-color: #8C0003;
+			--text-color-small: #fff;
+			--text-color-title: #F1DCC8;
+			--text-color-title2: #fff;
+		}
 
-.article-header-text h2 {
-	font-size: 5rem;
-	word-break: keep-all;
-}
-.article-header-text h3 {
-	font-size: 2.5rem;
-	font-weight: 400;
-}
-.article-header-text h3 b {
-	font-weight: 700;
-	/*text-decoration: underline;
-	text-decoration-thickness: 0.1rem;
-	text-underline-offset: 0.3rem;*/
-}
-.column-image figure {
-	margin-bottom: 0.5rem;
-}
-.article-icon-text {
-	display: flex;
-	gap: 1rem;
-}
-.article-icon-text div {
-	display: flex;
-	align-items: flex-end;
-	font-size: 1.3rem;
-}
-.article-icon-text + .article-image {
-	margin-top: 1rem;
-}
-.article-icon-text figure {
-	width: 6rem;
-}
-.quote-normal {
-	margin-bottom: 4rem;
-}
-.footnote {
-	margin-top: 5rem;
-	border-top: 1px solid #000;
-	padding-top: 1rem;
-	font-size: 1.3rem;
-}
-.footnote ol {
-	counter-reset: custom-counter;
-	color: var(--main-color);
-}
-.footnote ol li {
-	counter-increment: custom-counter;
-	padding-left: 1.5rem;
-	position: relative;
-}
-.footnote ol li::before {
-	content: counter(custom-counter);
-	font-weight: bold;
-	position: absolute;
-	left: 0;
-}
-.footnote ol li {
-	margin-bottom: .8rem;
-	line-height: 1.3;
-}
-@media (max-width:767px) {
-}
+		.article-header-text h2 {
+			font-size: 5rem;
+			word-break: keep-all;
+		}
+
+		.article-header-text h3 {
+			font-size: 2.5rem;
+			font-weight: 400;
+		}
+
+		.article-header-text h3 b {
+			font-weight: 700;
+		}
+
+		.column-image figure {
+			margin-bottom: 0.5rem;
+		}
+
+		.article-icon-text {
+			display: flex;
+			gap: 1rem;
+		}
+
+		.article-icon-text div {
+			display: flex;
+			align-items: flex-end;
+			font-size: 1.3rem;
+		}
+
+		.article-icon-text+.article-image {
+			margin-top: 1rem;
+		}
+
+		.article-icon-text figure {
+			width: 6rem;
+		}
+
+		.quote-normal {
+			margin-bottom: 4rem;
+		}
+
+		.footnote {
+			margin-top: 5rem;
+			border-top: 1px solid #000;
+			padding-top: 1rem;
+			font-size: 1.3rem;
+		}
+
+		.footnote ol {
+			counter-reset: custom-counter;
+			color: var(--main-color);
+		}
+
+		.footnote ol li {
+			counter-increment: custom-counter;
+			padding-left: 1.5rem;
+			position: relative;
+		}
+
+		.footnote ol li::before {
+			content: counter(custom-counter);
+			font-weight: bold;
+			position: absolute;
+			left: 0;
+		}
+
+		.footnote ol li {
+			margin-bottom: .8rem;
+			line-height: 1.3;
+		}
+
+		@media (max-width:767px) {}
 	</style>
 
 </head>
+
 <body>
 	<header class="header" id="header"></header>
 	<main>
@@ -97,20 +109,18 @@
 					<div class="article-header-text">
 						<span>테마 인터뷰</span>
 						<h2>
-							우리 땅의 약초로 여는 <br>K-허브의 시대!
+							RDA승용마<br>국산 말 산업의<br>새로운 기준을 만들다
 						</h2>
 						<h3>
-							㈜서흥헬스케어<br>
-							<b>박금덕 대표</b>
+							국립축산과학원 난지축산연구센터<br>
+							<b>최재영 농업연구사 </b>
 						</h3>
 						<div class="article-meta">
 							<span class="b">글</span>
 							<span>장희주</span>
 							<span class="pipe">ㅣ</span>
 							<span class="b">사진</span>
-							<span>김준후</span><br>
-							<span class="b">추천</span>
-							<span>특용작물이용과 한신희 농업연구관</span>
+							<span>김준후</span>
 						</div>
 					</div>
 					<div class="article-header-image">
@@ -125,7 +135,9 @@
 			<div class="article-body-wrap">
 				<div class="article-prologue">
 					<p>
-						국산 약초의 힘이 건강기능식품으로 새롭게 피어나고 있다. 농촌진흥청의 연구성과를 토대로 (주)서흥헬스케어가 우리 땅의 약초를 활용한 전립선 건강기능식품 상용화를 눈앞에 두고 있다. 과학과 산업이 함께 만들어낸 이번 협업의 결실은, 국산 원료로 세계 시장에 도전하는 ‘K-허브’ 시대의 첫걸음이 되고 있다.
+						생활 승마의 대중화를 위해, 국립축산과학원 난지축산연구센터는 2009년부터 수입마와 퇴역 경주마를 대신할 ‘국산 승용마’ 개발에 꾸준히 매달려왔다. 그 결과 1세대를
+						시작으로 현재 3세대까지 연구가 이어졌고, 이 말들은 이제 단순히 탈 수 있는 말을 넘어 사람의 몸과 마음을 함께 보듬어주는 존재로 진화하고 있다. 그 한가운데에서
+						RDA승용마 개발을 이끌고 있는 사람이 바로 최재영 농업연구사다.
 					</p>
 				</div>
 				<div class="article-text">
@@ -137,13 +149,30 @@
 						</div>
 					</div>
 					<h4>
-						건강한 삶을 설계하는 기업
+						국산 승용마, 아무도 가지 않은 길을 열다
 					</h4>
 					<p>
-						현대인들에게 ‘건강’은 그 어느 때보다 중요한 화두다. 이때 말하는 건강은 단순히 오래 사는 삶을 위한 필요조건이 아니다. 어떻게 살아가느냐, 즉 ‘삶의 질’을 지켜내는 일이다. 좋은 삶의 질을 유지하기 위해 균형 잡힌 식단은 기본이지만, 바쁜 일상 속에서 모든 영양소를 완벽히 챙기기란 쉽지 않다. 그래서 ‘건강기능식품’ 은 현대인의 필수 동반자가 됐다. 일상 식단에서 부족한 영양소를 보충하고, 내 몸이 필요로 하는 기능성을 채워 넣어 건강한 리듬을 유지하도록 돕는 것이 바로 건강기능식품의 역할인 것이다.
+						국내 승용마 시장은 오랫동안 수입마와 퇴역 경주마가 중심이었다. 그러나 이 말들은 체고(말의 어깨 높이)가 160cm에 이르는 경우가 많아 아이들이나 여성, 초보 승마인이
+						다가서기에는 문턱이 높았다. 승마를 대중화하기 위해서는 무엇보다 ‘편하게 탈 수 있는 말’이 필요했고, 이는 단순히 품종 하나를 개발하는 문제가 아니라 누구나 접근할 수
+						있는 말 기반을 만드는 작업이었다. 결국 누구나 편안하고 안전하게, 그리고 꾸준하게 탈 수 있는 국산 승용마 개발은 산업적 필요를 넘어 현장의 간절한 요구였다.
 					</p>
 					<p>
-						이러한 흐름 속에서 (주)서흥헬스케어(이하 서흥헬스케어)는 건강기능식품이 만들어지기까지, 어떤 원료로 어떤 기능을 담을지 연구하고, 그 기능을 가장 잘 전달할 수 있는 제형을 설계 한 뒤, 실제 제품으로 생산해 소비자에게 전달하는 전 과정을 책임지고 있는 건강기능식품 전문 기업이다. 이를 위해 서흥헬스케어는 액상·겔·시럽·스틱젤리·워터젤리·소프트바 등 다양한 제형을 개발해 소비자의 섭취 편의성을 높이고, 병포장·배면스틱·오버캡 등 여러 포장 기술로 제품의 품질과 유통 안정성을 확보했다. 여기에 경질캡슐·정제·분말 제형 시설까지 갖춘 탄탄한 인프라를 기반으로, 국내 주요 식품·제약 대기업과 협업해 다양한 브랜드의 건강기능식품을 안정적으로 생산·공급하며 업계의 신뢰를 쌓아가고 있다. 
+						특히 본격적인 승용마 연구가 시작되기 전인 2009년 당시만 해도 국내 말 산업은 성장 가능성은 컸지만, 제대로 된 국산 승용마 품종은 존재하지 않았다. 수입에 의존해 온
+						탓에 번식· 육성·조련·품질 평가 체계가 모두 ‘초기 단계’에 머물러 있었고, 연구는 말 그대로 0에서 1을 만드는 과정이었다. 말의 형질을 개량하는 데서 끝나는 일이
+						아니었다. 어떤 기준으로 선발할지, 한국 승마 환경에 적합한 체형과 기질은 무엇인지, 조련 기준을 어떻게 세울지, 보급은 어떤 방식으로 이뤄져야 하는지. 수많은 기준을
+						동시에 설계해야 하는, 복합적인 기초 연구였다.
+					</p>
+					<p>
+						그 중심에서 난지축산연구센터는 우리나라 환경과 인력, 승마 문화에 맞는 국산 승용마의 체계를 하나씩 쌓아 올려왔다. 강건성을 가진 ‘제주마’와 ‘외국산 말(더러브렛)’을
+						교배해 생활 승마에 적합한 개체를 만들어왔고, 1세대부터 최근 3세대까지 국산 승용마의 발전을 꾸준히 이어오고 있다. 1세대와 2세대로 기반을 다진 뒤, 현재는 최재영
+						농업연구사가 제3세대 RDA(Rural Development Administration, 농촌진흥청의 약자)승용마 연구를 이끌고 있다.
+					</p>
+					<p>
+						“연구는 크게 체형, 모색, 그리고 품성 이 세 가지가 중심입니다. 1세대에서 3세대까지 오면서 가장 눈에 띄게 달라진 건 체형이에요. 12개월령 기준으로 보면 1세대
+						체고가 124.5cm였는데 3세대는 128.3cm 약 4cm 더 크게 개량됐습니다. 이는 단순한 교배가 아니라, 전통 육종 기술을 활용해 12개월령 체고 육종가가 높은
+						개체를 씨수말로 선발한 결과예요. 모색은 승마인이 선호하는 ‘흑색’과 ‘흑백얼루기’ 두 가지로 고정해 생산하고 있습니다. 이는 털색에 영향을 미치는 MC1R과 ASIP
+						유전자 변이를 분석해 흑색과 흑백얼루기로 안정적으로 표현되도록 한 결과죠. ASIP 유전자는 2015년에 이미 완전히 고정됐고, MC1R 역시 현재 90% 이상 고정이 진행
+						중이라 4세대쯤 되면 완전 고정이 가능할 것으로 보고 있습니다.”
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -153,10 +182,13 @@
 						</div>
 					</div>
 					<p>
-						“서흥헬스케어는 건강기능식품 분야의 선두주자라고 할 수 있습니다. 한국에서 이 산업이 막 자리 잡기 시작할 때부터 함께 성장해 왔고, 그만큼 오랜 경험과 노하우를 쌓아왔죠. 처음에는 고객사의 요청에 따라 제품을 개발·생산하는 ODM(Original Design Manufacturing) 방식으로 출발했지만, 이제는 한 단계 더 나아가 시장의 흐름과 기술을 직접 제안하며 새로운 제품 방향을 함께 만들어가는 OBM(Original Brand Manufacturer) 형태로 확장하고 있습니다.”
+						무엇보다 핵심은 품성이다. 말은 사람이 직접 타는 동물이기 때문에 온순하고 안정적인 기질은 필수 조건이다. 그래서 최재영 농업연구사는 태어날 때부터 성장 과정까지, 말의
+						기질을 세밀하게 평가하며 승마에 적합한 품성을 가진 개체를 선발하기 위한 연구도 수행하고 있다.
 					</p>
 					<p>
-						이러한 변화는 단순히 제조 방식을 바꾸는 데 그치지 않았다. 서흥헬스케어는 자체 기획과 연구 역량을 강화하며, 새로운 기능성 원료를 발굴하고 검증하는 산학협력 중심의 연구체계로 발전시켜 나갔다. 그 연장선에서 농촌진흥청 국립원예특작과학원과 협력해 기능성 원료 연구개발에 나섰다. 국립원예특작과학원이 개발한 ‘참당귀·황기 복합물의 전립선 질환 개선 조성물(특허 제10-2021-0140917호)’의 제조 기술을 이전받아 본격적인 연구를 진행했으며, 현재는 연구개발을 모두 완료하고 제품 출시를 앞두고 있다. 
+						연구는 지금도 계속되고 있다. 현재 목표는 체고를 145~150cm 수준까지 끌어올리는 것이다. 체고는 단순한 외형이 아니라 RDA승용마가 현장에서 널리 활용되기 위한 핵심
+						조건이다. 말의 체고가 너무 낮으면 기존 승마인들이 느끼는 주행감과 재미가 부족해지고, 반대로 너무 높으면 초보자나 어린 승마인이 접근하기에 부담스러워진다. 이처럼 체고는
+						안전성과 이용 편의성, 승마의 재미까지 좌우하는 요소다. 그 적정선을 맞추기 위해, 난지축산연구센터의 체형 개량 연구는 지금도 꾸준히 이어지고 있다.
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -165,77 +197,77 @@
 							</figure>
 						</div>
 					</div>
-					<blockquote class="quote-normal" style="width: 75%;">
-						국산 약초를 기반으로 한 ‘K-허브 산업’을 선도하며, 우리 땅의 원료로 만든 건강기능식품으로 세계 시장에서 인정받는 기업이 되고 싶습니다.
+					<blockquote class="quote-normal" style="width: 70%;">
+						최재영 농업연구사는 태어날 때부터 성장 과정까지, 말의 기질을 세밀하게 평가하며 승마에 적합한 품성을 가진 개체를 지속적으로 선발하고 있다.
 					</blockquote>
 					<h4>
-						우리 땅의 약초가 만든 건강의 해답 
+						태어나는 순간부터 길러지는 말, 안전을 위한 과학
 					</h4>
 					<p>
-						“서흥헬스케어는 기능성이 뛰어난 소재를 찾기 위해 늘 새로운 가능성을 탐색해왔어요. 그러던 중에 농촌진흥청에서 국내산 원료인 ‘참당귀·황기 복합물’이 전립선 건강에 효과가 있다는 연구 결과를 발표했다는 소식을 들었죠. 과학적으로 효능이 입증된 소재라는 점에서 큰 관심이 생겼고, 이후 2021년 ‘바이오그린 연계 농생명혁신기술개발사업’을 통해 본격적으로 원료 개발과 제품화 과정에 함께 참여하게 됐습니다.”
+						현재 난지축산연구센터에는 약 80두의 말이 사육되고 있으며, 연구진은 이들을 세심하게 관찰하며 개량과 훈련을 동시에 진행하고 있다.
 					</p>
 					<p>
-						다양한 건강기능식품이 쏟아지는 가운데, 우리 사회는 초고령화 시대로 접어들며 고령층을 위한 맞춤형 제품 개발의 필요성이 그 어느 때보다 커지고 있다. 특히 ‘전립선 비대증’은 고령 남성에게서 흔히 나타나는 질환으로, 배뇨 장애와 잔뇨감, 야간뇨 등 일상 속 불편을 초래한다. 이를 개선하기 위해 많은 이들이 전립선 건강에 좋은 건강기능식품을 섭취해 왔지만, 그동안 이 분야의 원료는 대부분 수입산 쏘팔메토 추출물에 의존해왔다. 
+						“조련은 망아지가 태어나는 순간부터 시작됩니다. 말이 주변의 사물이나 사람에게 익숙하게 만들고, 공포심을 줄여 관리자를 잘 따르도록 만드는 과정이 바로 ‘순치’예요. 먼저
+						사람과의 관계를 형성하는 각인과 순치를 시작으로, 재갈을 물리는 인마 순치, 안장을 올리는 안장 순치 등 여러 단계의 순치 과정을 차근차근 밟아갑니다. 아무래도 말은 사람이
+						직접 타는 경우가 많아, 무엇보다 ‘안정성’이 가장 중요하거든요. 타는 사람도, 말도 모두 안전해야 하니까요. 그런 이유로 센터에서는 조련과 순치뿐만 아니라 말의 기질과
+						품성 평가 연구도 함께 진행하고 있습니다.”
 					</p>
 					<p>
-						이러한 한계 속에서 서흥헬스케어는 국립원예특작과학원이 개발한 참당귀·황기 복합물의 전립선 질환 개선 조성물에서 새로운 해답을 찾아 나섰다. 
+						품성 개량을 위한 다양한 연구도 활발히 이뤄지고 있다. 그중 하나가 일반 승마장에서 RDA승용마를 직접 이용한 승마인들을 대상으로 한 ‘현장 반응 조사’다. 조사 결과,
+						RDA승용마는 온순성·대인 친화성·시승 만족도 모두에서 높은 평가를 받았다. 즉, 실사용자들의 평가에서도 ‘안전하고 순한 말’이라는 특성이 입증된 셈이다.
 					</p>
 					<p>
-						“그동안 전립선 건강기능식품의 대표 원료는 쏘팔메토였어요. 하지만 대부분 수입산이었고, 효능과 안전성 논란도 끊이지 않았죠. 서흥헬스케어는 그 대체 소재로 국내산 약용작물인 ‘참당귀·황기 복합물’에 주목했고, 본격적인 개발을 시작했습니다. 특히 쏘팔메토가 전립선 건강에만 초점을 맞춘 단일 기능 원료라면, 참당귀·황기 복합물은 전립선 건강을 비롯해 세포 증식 억제, 호르몬 조절, 배뇨 개선, 활력 증진 등 다섯 가지 기능이 과학적으로 입증된 건강기능식품 원료입니다.”
+						“유소년 승마대회나 승용마 품평회에도 꾸준히 출품하며 능력을 검증받고 있습니다. 2019년 한국마사회 유소년 승마대회에서 3위를 차지했고, 2024년 한국마사회 국산마
+						품평회에도 두 마리가 출품돼 한 마리는 2등급, 한 마리는 3등급을 받았어요. 품평회에서는 외형도 보지만, 무엇보다 사람의 지시에 얼마나 잘 따르는지, 레저용 말로서 얼마나
+						안정적인지가 평가의 핵심입니다. 레저용 말은 쉽게 놀라면 안 되고, 안전성이 가장 중요하거든요.”
 					</p>
-					<div class="article-image">
+					<p>
+						이 연구는 단순히 말의 특성을 체크하는 데 그치지 않는다. 사람마다 성격과 기질이 다르듯, 말 역시 개체마다 기질이 모두 다르다. 그래서 최재영 농업연구사는 말의 품성을
+						체계적으로 평가하고, 이러한 기질적 특성이 어느 정도 유전적으로 전달되는지까지 함께 연구하고 있다.
+					</p>
+					<p>
+						“말의 기질적 특성들은 ‘중도의 유전력’을 갖는 것으로 연구 결과가 나왔습니다. 부모가 온순하다고 해서 자식도 100% 온순하다는 뜻은 아니지만, 어느 정도는 유전되는
+						거죠. 기본 기질이 순하고 조련까지 잘 이뤄지면 그만큼 더 안정적인 승용마로 자라게 됩니다.”
+					</p>
+					<div class="article-image dual-image big-image">
 						<div class="article-image-container">
 							<figure>
 								<img src="contents/sub_11_image_4.jpg">
 							</figure>
-						</div>
-					</div>
-					<p>
-						2023년부터 진행된 이번 개발은 시험관 시험과 동물 시험, 인체적용 시험을 거치며 기능성과 안전성을 과학적으로 입증했다. 이러한 연구를 통해 원료의 표준화와 안정성도 확립되었고, 그 결과 참당귀·황기 복합물은 전립선 건강 기능성 소재로서 식품의약품안전처의 개별인정(제2024-28호)을 받았다. 현재는 건강기능식품 원료로 품목신고와 본생산을 마친 상태로, 내년 상반기에는 다양한 제형의 완제품이 소비자들에게 선보일 예정이다.
-					</p>
-					<p>
-						“농촌진흥청은 정말 다양한 특용작물을 연구하고 있습니다. 기업으로서는 단독으로 감당하기 어려운 규모의 연구들이죠. 참당귀와 황기를 2:1 비율로 섞은 복합물을 만들기 위해 실험을 정말 많이 하셨어요. 원료의 표준화부터 제조, 생산 공정까지 체계적으로 세팅해 주셨고요. 덕분에 그 기술을 이전받아 제품 개발을 진행할 수 있었습니다.” 
-					</p>
-					<p>
-						좋은 연구 성과를 실제 제품으로 이어가기 위해 서흥헬스케어는 하드캡슐부터 고형 제형까지 다양한 형태를 검토하며 샘플을 제작했다. 완성된 샘플은 주변 대상자들에게 직접 평가를 받아봤는데, 반응이 매우 긍정적이었다. 전립선 문제로 인한 빈뇨가 개선되고 수면의 질이 좋아졌다는 피드백이 많았으며, 무엇보다 약이 아닌 건강기능식품이라 부작용에 대한 부담이 적어 안심할 수 있었다는 반응이 이어졌다. 
-					</p>
-					<div class="article-image ">
-						<div class="article-image-container">
 							<figure>
 								<img src="contents/sub_11_image_5.jpg">
+							</figure>
+							<figure>
+								<img src="contents/sub_11_image_6.jpg">
 							</figure>
 						</div>
 					</div>
 					<h5>
-						글로벌 브랜드를 향한 서흥헬스케어의 도전 
+						공공 안전에서 치유까지, RDA승용마의 미래
 					</h5>
 					<p>
-						서흥헬스케어는 본격적인 생산과 판매를 앞두고 안정적인 소재 공급을 위한 국내 기반도 마련했다. 이 과정에서도 농촌진흥청 특용작물과의 협력이 큰 힘이 됐다. 현재 제천·평창·영주 등 주요 약초 산지를 중심으로 원료를 확보할 수 있는 기반을 마련했으며, 특용작물과와의 협업을 통해 국내 약용작물의 표준화와 재배 체계를 구축했다. 이는 단순한 원료 확보를 넘어, 국산 약용작물 산업의 자립 기반을 다지는 중요한 과정으로 평가된다.
+						이렇게 개량과 탄생, 그리고 단계별 훈련과 조련을 거친 말들은 이제 실제 현장으로 나아가게 된다. 최근 농촌진흥청 국립축산과학원은 제주특별자치도와 업무협약을 맺고,
+						2025년 12월부터 RDA승용마 두 마리를 자치경찰단 기마대 업무에 투입했다. RDA승용마는 자치경찰단과 함께 제주 주요 관광지를 돌며 순찰 업무를 수행하게 된다. 특히
+						생활 승마용으로 개량해 온 RDA승용마가 공공 안전 분야에 처음 적용되는 사례라는 점에서도 의미가 크다.
 					</p>
 					<p>
-						참당귀·황기 복합물로 시작된 이번 연구는 단순한 제품 개발을 넘어, ‘우리 땅에서 자란 원료로 만드는 건강기능식품’이라는 새로운 모델을 제시하고 있다. 서흥헬스케어는 이러한 국산 기능성 소재를 기반으로 한 제품 개발을 이어가며, 체지방 감소나 인지기능 개선 등 차세대 개별인정형 기능성 원료 연구에도 박차를 가하고 있다.
+						하지만 이것은 단지 ‘첫걸음’에 불과하다. 앞으로 최재영 농업연구사의 연구는 RDA승용마를 기반으로 말 교감 치유 프로그램을 개발하고 적용하는 방향으로 확장할 계획이다.
 					</p>
 					<p>
-						“서흥헬스케어는 무엇보다 국산 자원과 천연물을 활용한 기능성 제품 개발에 집중하고 있습니다. 우리 땅에서 자란 원료로 건강기능식품을 만들고, 이를 바탕으로 세계 시장에 진출하는 것이 목표죠. K-팝, K-컬처처럼 국산 약초를 기반으로 한 ‘K-허브 산업’을 선도하며, 우리 땅의 원료로 만든 건강기능식품으로 세계 시장에서 인정받는 기업이 되고 싶습니다.”
+						“지금까지는 품종 개발이 중심이었다면, 앞으로는 RDA승용마가 실제 산업 현장에서 더 폭넓게 활용될 수 있도록 실용화를 추진하고자 합니다. 말은 기본적으로 사람과 함께
+						활동하는 동물이라 심폐 기능, 근력 강화 같은 전신 운동 효과가 큽니다. 더불어 살아 있는 말과 교감하는 과정에서는 정서 안정, 사회성 회복, 신뢰 형성 같은 심리적 효과도
+						기대할 수 있어요. 그래서 앞으로는 말 교감·치유 프로그램을 개발하는 연구도 진행해보려고 합니다. 스포츠 승마뿐 아니라 관광·체험·재활 승마까지 타깃층을 넓힐 수 있다고
+						보고 있습니다.”
 					</p>
 					<p>
-						서흥헬스케어의 비전은 단순히 건강기능식품을 생산하는 데 그치지 않는다. 국민의 건강 증진을 위해 끊임없이 연구개발을 이어가며, 그 근원을 국내산 원료와 천연 자원에서 찾고 있다. 이는 제품 개발을 넘어 국산 원료 산업의 성장과 농가와의 상생으로 이어지는, 건강한 선순환의 길이다. 이제 서흥헬스케어는 우리 땅의 자원으로 세계의 건강을 지키는 첫걸음을 내딛으려 한다. 참당귀·황기 복합물의 상용화를 시작으로, 진정한 ‘K-허브’의 시대를 열어갈 것이다. 
+						RDA승용마가 걸어갈 길은 이제 한층 더 넓어지고 있다. 생활 승마에서 공공 안전, 그리고 치유까지. RDA승용마의 가능성은 이제부터가 시작이다.
 						<i class="icon_last"></i>
 					</p>
-					<!-- <div class="footnote">
-						<ol>
-							<li>
-								‘업그레이드(Upgrade)’와 ‘리사이클링(Recycling)’을 합성한 말. 기존 제품의 특성을 변형하거나 새로운 용도로 활용해 가치를 높이는 것을 뜻하며, 우리말로는새 ‘활용’이라 한다.
-							</li>
-							<li>
-								제품, 포장, 자재를 태우지 않고, 책임 있는 생산·소비·재사용·회수를 통해 자원을 보존하는 것을 목표로 하는 개념. 우리말로는 ‘쓰레기 없애기’라고 한다.
-							</li>
-						</ol>
-					</div> -->
 				</div>
 			</div>
 		</section>
 	</main>
 	<footer class="footer" id="footer"></footer>
 </body>
+
 </html>
